--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
    "name": "Loginserver",
-    "version": "1.0.0",
-    "description": "LoginServerAndRegsiter",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-
-
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
-  },
-  "engines": {
-  "node": ">=18.0.0"
-},
-  "author": "Hari",
-  "license": "ISC"
+   "version": "1.0.0",
+   "description": "LoginServerAndRegsiter",
+   "main": "app.js",
+   "scripts": {
+      "start": "node app.js",
+      "postinstall": "npm install"
+   },
+   "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.4.5",
+      "express": "^4.19.2",
+      "jsonwebtoken": "^9.0.2",
+      "mongodb": "^6.10.0",
+      "mongoose": "^8.7.3",
+      "sqlite": "^5.1.1",
+      "sqlite3": "^5.1.7"
+   },
+   "devDependencies": {
+      "nodemon": "^3.1.4"
+   },
+   "engines": {
+      "node": ">=18.0.0"
+   },
+   "author": "Hari",
+   "license": "ISC"
 }
-
-
