--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
       "postinstall": "npm install"
    },
    "dependencies": {
+      "cloudinary": "^2.5.1",
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
       "express": "^4.19.2",
       "jsonwebtoken": "^9.0.2",
       "mongodb": "^6.10.0",
       "mongoose": "^8.7.3",
+      "multer": "^1.4.5-lts.1",
       "sqlite": "^5.1.1",
       "sqlite3": "^5.1.7"
    },
