--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
       "mongoose": "^8.7.3",
       "multer": "^1.4.5-lts.1",
       "sqlite": "^5.1.1",
-      "sqlite3": "^5.1.7"
+      "sqlite3": "^5.1.7",
+      "streamifier": "^0.1.1"
    },
    "devDependencies": {
       "nodemon": "^3.1.4"
